--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 		<div class="imgGrid">
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_1--Shot_by_Phi_Vu">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_1--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_1--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -200,7 +200,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_2--Shot_by_Phi_Vu">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_2--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_2--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -208,7 +208,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_3--Shot_by_Phi_Vu">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_3--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_3--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -216,7 +216,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_4--Shot_by_Phi_Vu">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_4--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_4--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -224,7 +224,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_5--Shot_by_Didier_Osias">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_5--Shot_by_Didier_Osias">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_5--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
@@ -232,7 +232,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_6--Shot_by_Didier_Osias">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_6--Shot_by_Didier_Osias">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_6--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
@@ -240,7 +240,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_7--Shot_by_Didier_Osias">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_7--Shot_by_Didier_Osias">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_7--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
@@ -248,7 +248,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_8--Shot_by_Didier_Osias">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_8--Shot_by_Didier_Osias">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_8--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
@@ -256,7 +256,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_9--Shot_by_Didier_Osias">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_9--Shot_by_Didier_Osias">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_9--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
@@ -264,7 +264,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_10--Shot_by_Phi_Vu">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_10--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_10--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -272,7 +272,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_11--Shot_by_Phi_Vu">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_11--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_11--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -280,7 +280,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#HOMME_BODY_Editorial_12--Shot_by_Phi_Vu">
+					<a href="homme-body-editorial/#HOMME_BODY_Editorial_12--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_12--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -288,7 +288,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#Cortez_Derby_1_in_collaboration_with_Batrachotoxin">
+					<a href="homme-body-editorial/#Cortez_Derby_1_in_collaboration_with_Batrachotoxin">
 						<img loading="lazy" src="assets/images/homme-body/editorial/Cortez_Derby_1_in_collaboration_with_Batrachotoxin.webp">
 					</a>
 				</div>
@@ -296,7 +296,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="/homme-body-editorial/#Cortez_Derby_1_in_collaboration_with_Batrachotoxin">
+					<a href="homme-body-editorial/#Cortez_Derby_1_in_collaboration_with_Batrachotoxin">
 						<img loading="lazy" src="assets/images/homme-body/editorial/Cortez_Derby_2_in_collaboration_with_Batrachotoxin.webp">
 					</a>
 				</div>
