--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 		<div class="imgGrid">
 			<figure>
 				<div>
-					<a href="#">
+					<a href="homme-body-lookbook/#HOMME_BODY_Look_1_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_1_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -321,7 +321,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="homme-body-lookbook/#HOMME_BODY_Look_2_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_2_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -329,7 +329,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="homme-body-lookbook/#HOMME_BODY_Look_3_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_3_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -337,7 +337,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="homme-body-lookbook/#HOMME_BODY_Look_4_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_4_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>	
@@ -345,7 +345,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="homme-body-lookbook/#HOMME_BODY_Look_5_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_5_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -353,7 +353,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="homme-body-lookbook/#HOMME_BODY_Look_6_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_6_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -361,7 +361,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="homme-body-lookbook/#HOMME_BODY_Look_7_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_7_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -369,7 +369,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="homme-body-lookbook/#HOMME_BODY_Look_8_White_Cotton_Undershirt_with_Black_Double_Pleated_Shorts--Shot_by_Phi_Vu">
 						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_8_White_Cotton_Undershirt_with_Black_Double_Pleated_Shorts--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
@@ -500,7 +500,7 @@
 		<div class="imgGrid">
 			<figure>
 				<div>
-					<a href="#">
+					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_1--Shot_by_Ashley_Zhang">
 						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_1--Shot_by_Ashley_Zhang.webp">
 					</a>
 				</div>
@@ -508,7 +508,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_2--Shot_by_Tommy_Park">
 						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_2--Shot_by_Tommy_Park.webp">
 					</a>
 				</div>
@@ -516,7 +516,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_3--Shot_by_Tommy_Park">
 						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_3--Shot_by_Tommy_Park.webp">
 					</a>
 				</div>
@@ -524,7 +524,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_4--Shot_by_Ashley_Zhang">
 						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_4--Shot_by_Ashley_Zhang.webp">
 					</a>
 				</div>
@@ -532,7 +532,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_5--Shot_by_Ashley_Zhang">
 						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_5--Shot_by_Ashley_Zhang.webp">
 					</a>
 				</div>
@@ -540,7 +540,7 @@
 			</figure>
 			<figure>
 				<div>
-					<a href="#">
+					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_6--Shot_by_Tommy_Park">
 						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_6--Shot_by_Tommy_Park.webp">
 					</a>
 				</div>
