--- a/homme-body-lookbook/index.html
+++ b/homme-body-lookbook/index.html
@@ -6,126 +6,7 @@
 	<title>BRANDON J. CHU</title>
 	<link rel="stylesheet" type="text/css" href="../assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="../assets/css/font.css">
-	<style type="text/css">
-		html{
-			font-size: 16px;
-		}
-		@media all and (max-width: 48em) { 
-			html{ 
-				font-size: 14px;
-			} 
-		}
-		@media all and (max-width: 36em) { 
-			html{ 
-				font-size: 12px;
-			} 
-		}
-		html, body{
-			scroll-behavior: smooth;
-		}
-		body{
-			font-family: 'Arial_Narrow_Bold';
-			-webkit-font-smoothing:antialiased;
-			font-size: 1rem;
-			line-height: 1.2;
-			margin:1rem;
-			text-transform: uppercase;
-			background-color: #fff;
-			color:#fff;
-		}
-		body > header{
-  			position: sticky;
-			top: 1rem;
-			width:100%;
-			display: flex;
-  			flex-direction: row;
-  			flex-wrap: nowrap;
-  			gap:0.75rem;
-  			margin-bottom: 1.2rem;
-  			z-index:9999;
-  		}
-
-  		body > header h1{
-  			white-space: nowrap;
-  		}
-		nav{
-			position: fixed;
-			top:0;
-			left:0;
-			height:100vh;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-			align-items: space-between;
-			padding:1rem;
-			pointer-events: none;
-			z-index:9999;
-		}
-		header, nav{
-  			mix-blend-mode: difference;
-  		}
-		nav > div{
-			pointer-events: auto;
-		}
-
-		main.scroll{
-			display: flex;
-			flex-direction: column;
-			gap:2rem;
-		}
-
-		figure{
-			width:100%;
-			height: calc(100vh - 5.2rem);
-		}
-		img{
-			display: block;
-			margin:auto;
-			width: 100%;
-			height:100%;
-			object-fit: contain;
-		}
-
-		details summary{
-  			width:fit-content;
-  			cursor: pointer;
-  		}
-		details summary::-webkit-details-marker {
-			display:none;
-		}
-		details > summary:first-of-type {
-			list-style-type: none;
-		}
-		@media all and (max-width: 32rem) { 
-
-		}
-		
-		summary:after, .arrDown:after{
-			content:'▽';
-			font-family: 'arrow';
-			display: inline-block;
-			transform-origin: center;
-			transform: scaleX(0.7);
-		}
-		details[open] summary:after{
-			content:'△';
-		}
-		.arrRight:after{
-			content:'▷';
-			font-family: 'arrow';
-			display: inline-block;
-			margin: 0 0.1rem 0 0.2rem;
-			transform-origin: 0 0.4rem;
-			transform: scaleY(0.75);
-		}
-		sub{
-			font-size: 0.8rem;
-		}
-		#index{
-			position: absolute;
-			right:0;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="../assets/css/loadpage.css">
 </head>
 <body>
 	<header>
